Should have fixed sidebar not showing

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 #wrapper {
-  padding-left: 0;
+  padding-left: 100px;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -24,7 +24,7 @@ body {
   z-index: 1000;
   position: fixed;
   left: 250px;
-  width: 0;
+  width: 100px;
   height: 100%;
   margin-left: -250px;
   overflow-x: hidden;
